# udesc

./: .gitignore  README.md
ban2/: BAN-Trab1_part1.xml  BAN-Trab1_part2-esquema_relacional.txt  ex5_pt1.sql  ex8.sql  ex9.txt
cal/: implementacoes.c  lista1.c  lista2.c  lista5.cpp  main
com/: linguagem.txt  trab.output  trab.y
iar/: ia-trabalho-final-paulo-roberto-albuquerque.ipynb
mfo/: .gitignore  ListaExe1.v  ListaExec3.v
pap/: concatena.txt  filtrar.hs  lista.hs  lista1.hs  maiorElemento.hs  (+3 more)
soft/projeto_fase3/: CMakeLists.txt  Makefile  ProjetoSoft  README.md
soft/projeto_fase3/.git-repo-imported/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
soft/projeto_fase3/.git-repo-imported/logs/: HEAD
soft/projeto_fase3/.git-repo-imported/logs/refs/remotes/origin/: HEAD  master
soft/projeto_fase3/.git-repo-imported/objects/pack/: pack-62743e37ff889c7679bf294b8cc75cd489ee0da9.idx  pack-62743e37ff889c7679bf294b8cc75cd489ee0da9.pack
soft/projeto_fase3/.git-repo-imported/refs/remotes/origin/: master
soft/projeto_fase3/googletest/.git-repo-imported/: config  index  packed-refs
soft/projeto_fase3/googletest/.git-repo-imported/logs/refs/heads/: master
soft/projeto_fase3/googletest/.git-repo-imported/objects/pack/: pack-65b2be6a85a50885a8fbce0b7aa330b2871c0851.idx
soft/projeto_fase3/googletest/.git-repo-imported/refs/heads/: master
soft/projeto_fase3/src/: Aluno.cpp  Aluno.hpp  Materia.cpp  Materia.hpp  Professor.cpp  Professor.hpp  main.cpp
soft/projeto_fase3/test/: AlunoUnitTest.cpp  CMakeLists.txt  MateriaUnitTest.cpp  ProfessorUnitTest.cpp
(+332 files in other folders)
